api: Replace classic threads with virtuals